# wasm-dns-https

./: Cargo.toml  README.md  fastly.toml
.github/: CODEOWNERS
.github/base/: action.yml
.github/workflows/: build.yml  clippy.yml  deploy.yml  lint.yml  test.yml
src/: 200.html  404.html  main.rs
