[package]
name = "dns-over-https-wasm"
version = "0.1.0"
authors = ["Ricky <Ricky@Hosfe.lt>"]
edition = "2021"
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "0.9.8"
log-fastly = "0.9"
log = "0.4"
base64 = "0.21"
dns-message-parser = "0.7"
dns-parser = "0.8"
bytes = "1.5"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }